mesa: eedbce9c63a3f385908bdc8a69e8be98dd3522ff (master 10.4.0-devel) Compiling src/gallium/drivers/llvmpipe/lp_test_format.c ... src/gallium/drivers/llvmpipe/lp_test_format.c: In function ‘test_format_unorm8’: src/gallium/drivers/llvmpipe/lp_test_format.c:226:4: error: too few arguments to function ‘gallivm_create’ gallivm = gallivm_create("test_module_unorm8"); ^ In file included from src/gallium/auxiliary/gallivm/lp_bld_format.h:38:0, from src/gallium/drivers/llvmpipe/lp_test_format.c:42: src/gallium/auxiliary/gallivm/lp_bld_init.h:58:1: note: declared here gallivm_create(const char *name, LLVMContextRef context); ^
83c62597fc8eb38bf274fa1a3ca03c6adafb4bf9 is the first bad commit commit 83c62597fc8eb38bf274fa1a3ca03c6adafb4bf9 Author: Mathias Fröhlich <Mathias.Froehlich@gmx.net> Date: Thu Aug 28 19:49:35 2014 +0200 llvmpipe: Use two LLVMContexts per OpenGL context instead of a global one. This is one step to make llvmpipe thread safe as mandated by the OpenGL standard. Using the global LLVMContext is obviously a problem for that kind of use pattern. The patch introduces two LLVMContext instances that are private to an OpenGL context and used for all compiles. One is put into struct draw_llvm and the other one into struct llvmpipe_context. Reviewed-by: Jose Fonseca <jfonseca@vmware.com> Signed-off-by: Mathias Froehlich <Mathias.Froehlich@web.de> :040000 040000 6d96f4184ccbcaea41332f376e8df54d00d8ff7e 00c106532ffc70214fff90833757ae321390b65a M src bisect run success
commit 6a238ac0b7436c26cc236740d68cdc3eab3aea89 Author: Vinson Lee <vlee@freedesktop.org> Date: Tue Sep 30 21:52:13 2014 -0700 llvmpipe: Add missing LLVMGetGlobalContext() arg in lp_test_format.c. Fix build error introduced with commit eedbce9c63a3f385908bdc8a69e8be98dd3522ff. lp_test_format.c: In function ‘test_format_unorm8’: lp_test_format.c:226:4: error: too few arguments to function ‘gallivm_create’ gallivm = gallivm_create("test_module_unorm8"); ^ In file included from ../../../../src/gallium/auxiliary/gallivm/lp_bld_format.h:38:0, from lp_test_format.c:42: ../../../../src/gallium/auxiliary/gallivm/lp_bld_init.h:58:1: note: declared here gallivm_create(const char *name, LLVMContextRef context); ^ Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=84538 Signed-off-by: Vinson Lee <vlee@freedesktop.org>
Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.